# python-garminconnect

./: .coderabbit.yaml  .editorconfig  .env  .gitignore  .pdm-python  .pre-commit-config.yaml  Goals and Change Log.md  LICENSE  Makefile  My-Dev-Steps.md  README.md  SECURITY.md  dashboard.py  demo.py  example.py  example_tracking_gear.py  fetch_activities.py  garmin_auth_test.py  garth_migration.ipynb  pyproject.toml  reference.ipynb  requirements-dev.txt  requirements-test.txt  setup.py  test_proxy_bypass.py  test_strategy.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
docs/: graphql_queries.txt  reference.ipynb
garmin/: __init__.py  garmin.py
garmin-connect/: __init__.py  garmin.py
garmin_connect/: __init__.py
garminconnect/: __init__.py  __version__.py  client.py  data.py  exceptions.py  exercises.py  fit.py  graphql_queries.py  typed.py  workout.py
scripts/: generate_exercises.py
templates/: dashboard.html
test_data/: __init__.py  sample_activity.gpx  sample_cycling_workout.py  sample_hiking_workout.py  sample_running_workout.py  sample_strength_workout.py  sample_swimming_workout.py  sample_walking_workout.py  sample_workout.json
tests/: 12129115726_ACTIVITY.fit  conftest.py  test_cassette_sanitization.py  test_demo_security.py  test_error_handler_decorator.py  test_garmin.py  test_garmin_unit.py  test_login_recovery.py  test_retry_decorator.py  test_strength_workout.py  test_token_permissions.py  test_typed.py  test_widget_mfa.py  test_workout_constants.py
tests/cassettes/: test_all_day_stress.yaml  test_body_battery.yaml  test_body_composition.yaml  test_daily_steps.yaml  test_download_activity.yaml  test_floors.yaml  test_heart_rates.yaml  test_hrv_data.yaml  test_hydration_data.yaml  test_no_hrv_data.yaml  test_request_reload.yaml  test_respiration_data.yaml  test_spo2_data.yaml  test_stats.yaml  test_stats_and_body.yaml  test_steps_data.yaml  test_upload.yaml  test_user_summary.yaml
